# KiriMathMini

./: CMakeLists.txt  README.md
cmake/: CompileOptions.cmake  TaskingSystemOptions.cmake
include/kiri_math/: kiri_math_mini.h
include/kiri_math_mini/: blas.h  constants.h  cpp_utils.h  functors.h  kiri_math_mini.h  logging.h  parallel.h  pch.h  pde.h  platform.h  private_helpers.h  serial.h  type_helpers.h
include/kiri_math_mini/array/: array.h  array1.h  array2.h  array3.h  array_accessor.h  array_accessor1.h  array_accessor2.h  array_accessor3.h  array_samplers.h  array_samplers1.h  array_samplers2.h  array_samplers3.h  array_utils.h
include/kiri_math_mini/array/inl/: array1-inl.h  array2-inl.h  array3-inl.h  array_accessor1-inl.h  array_accessor2-inl.h  array_accessor3-inl.h  array_samplers1-inl.h  array_samplers2-inl.h  array_samplers3-inl.h  array_utils-inl.h
include/kiri_math_mini/inl/: blas-inl.h  cpp_utils-inl.h  functors-inl.h  parallel-inl.h  pde-inl.h  serial-inl.h
include/kiri_math_mini/math/: math_utils.h  matrix.h  matrix2x2.h  matrix3x3.h  matrix4x4.h  matrix_csr.h  matrix_expression.h  matrix_mxn.h  point.h  point2.h  point3.h  quaternion.h  samplers.h  size.h  size2.h  size3.h  vector.h  vector2.h  vector3.h  vector4.h  vector_expression.h  vector_n.h
include/kiri_math_mini/math/inl/: math_utils-inl.h  matrix-inl.h  matrix2x2-inl.h  matrix3x3-inl.h  (+18 more)
include/kiri_math_mini/physics/: bounding_box.h  bounding_box2.h  bounding_box3.h  physics_helpers.h  ray.h  ray2.h  ray3.h
src/kiri_math_mini/: fdm_utils.cpp  logging.cpp  parallel.cpp
(+5 files in other folders)
